<resources>
    <string name="app_name">HelloWorldWithLogin</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login_screen">LoginScreen</string>


    <string name="username_string">UserName</string>
    <string name="password_string">Password</string>
    <string name="enter_username_hint">Enter username</string>
    <string name="enter_password_hint">Enter Password</string>
    <string name="login_string">Login</string>
    <string name="hello">Hello Android!</string>
</resources>
