<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.akasiedu.helloworldwithlogin.LoginScreen">

    <TextView
        android:id="@+id/username_textview"
        android:layout_width="117dp"
        android:layout_height="wrap_content"
        android:text="@string/username_string"/>

    <EditText
        android:id="@+id/username_edittext"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_username_hint"
        android:inputType="text"/>

    <TextView
        android:id="@+id/password_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_string" >
    </TextView>

    <EditText
        android:id="@+id/password_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password_hint"
        android:inputType="textPassword">
    </EditText>

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/login_string" >
    </Button>

</LinearLayout>
